PRE should not start its own alignment, and TH should only CENTER if not inheriting. BUG: 79498 BUG: 42906
svn path=/trunk/KDE/kdelibs/; revision=433700

--- a/khtml/css/html4.css
+++ b/khtml/css/html4.css
@@ -220,7 +220,6 @@ TD, TH {
 
 TH {
 	font-weight: bolder;
-	text-align: center;
 }
 
 CAPTION {
@@ -454,7 +453,6 @@ PLAINTEXT {
 	display: block;
 	font-family: monospace;
 	white-space: pre;
-	text-align: -khtml-auto;
 	margin: 1__qem 0;
 }
 
